// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TwitterImage Component matches the snapshot for a landscape image in a summary card 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  max-width: 100%;
  margin: 0;
  padding: 1em;
  text-align: center;
  font-size: 1rem;
  width: 125px;
  border-top-left-radius: 14px;
  border-bottom-left-radius: 14px;
  border-style: dashed;
  border-width: 2px;
  color: #073cba;
  background-color: #f1f1f1;
}

<div
  className="c0"
>
  Select image
</div>
`;

exports[`TwitterImage Component matches the snapshot for a landscape image in a summary-large-image card 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  max-width: 100%;
  margin: 0;
  padding: 1em;
  text-align: center;
  font-size: 1rem;
  height: 265px;
  width: 506px;
  border-top-left-radius: 14px;
  border-top-right-radius: 14px;
  border-style: dashed;
  border-width: 2px;
  color: #073cba;
  background-color: #f1f1f1;
}

<div
  className="c0"
>
  Select image
</div>
`;

exports[`TwitterImage Component matches the snapshot for a square image in a summary card 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  max-width: 100%;
  margin: 0;
  padding: 1em;
  text-align: center;
  font-size: 1rem;
  width: 125px;
  border-top-left-radius: 14px;
  border-bottom-left-radius: 14px;
  border-style: dashed;
  border-width: 2px;
  color: #073cba;
  background-color: #f1f1f1;
}

<div
  className="c0"
>
  Select image
</div>
`;

exports[`TwitterImage Component matches the snapshot for a square image in a summary-large-image card 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  max-width: 100%;
  margin: 0;
  padding: 1em;
  text-align: center;
  font-size: 1rem;
  height: 265px;
  width: 506px;
  border-top-left-radius: 14px;
  border-top-right-radius: 14px;
  border-style: dashed;
  border-width: 2px;
  color: #073cba;
  background-color: #f1f1f1;
}

<div
  className="c0"
>
  Select image
</div>
`;

exports[`TwitterImage Component matches the snapshot in the loading state 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  max-width: 100%;
  margin: 0;
  padding: 1em;
  text-align: center;
  font-size: 1rem;
  height: 265px;
  width: 506px;
  border-top-left-radius: 14px;
  border-top-right-radius: 14px;
  border-style: dashed;
  border-width: 2px;
  color: #073cba;
  background-color: #f1f1f1;
}

<div
  className="c0"
>
  Select image
</div>
`;
